preliminary work on beem

--- a/configure.ac
+++ b/configure.ac
@@ -99,6 +99,7 @@ AC_CONFIG_FILES([
   bench/split-product/Makefile
   bench/wdba/Makefile
   bench/wdba/defs
+  bench/beem/Makefile
   doc/Doxyfile
   doc/Makefile
   iface/dve2/defs
