--- a/src/tgbatest/Makefile.am
+++ b/src/tgbatest/Makefile.am
@@ -104,7 +104,8 @@ TESTS = \
   emptchkr.test \
   ltlcounter.test \
   spotlbtt.test \
-  complementation.test
+  complementation.test \
+  propagation.test
 
 EXTRA_DIST = $(TESTS) ltlcounter/LTLcounter.pl				\
   ltlcounter/LTLcounterCarry.pl ltlcounter/LTLcounterCarryLinear.pl	\
