Add rebuild class to perform changes on formula
* src/tgbaalgos/Makefile.am (libtgbaalgos_la_SOURCES):
  add rebuild.cc source to the project and add the
  corresponding header
* src/tgbatest/randtgba.cc (main): add option -af to
  perform changes on the formula
* src/tgbaalgos/rebuild.hh (spot): New class to perform
   changes on the automaton of the formula
* src/tgbaalgos/rebuild.cc (spot): Basic rewritting
  of a tgba formula

--- a/src/tgbaalgos/Makefile.am
+++ b/src/tgbaalgos/Makefile.am
@@ -54,6 +54,7 @@ tgbaalgos_HEADERS = \
   projrun.hh \
   randomgraph.hh \
   reachiter.hh \
+  rebuild.hh \
   reducerun.hh \
   replayrun.hh \
   rundotdec.hh \
@@ -98,6 +99,7 @@ libtgbaalgos_la_SOURCES = \
   projrun.cc \
   randomgraph.cc \
   reachiter.cc \
+  rebuild.cc \
   reducerun.cc \
   replayrun.cc \
   rundotdec.cc \
