Started work on the New implementation of tgba_explicit.
* src/tgba/tgbaexplicit2.hh: new skeletton for tgba_explicit
* src/tgba/tgbaexplicit2.cc: test function for debugging
* src/tgba/Makefile.am: add tgba_explicit2.hh as a header and
tgba_explicit2.cc as a source file.

--- a/src/tgba/Makefile.am
+++ b/src/tgba/Makefile.am
@@ -44,6 +44,7 @@ tgba_HEADERS = \
   tgbabddcoredata.hh \
   tgbabddfactory.hh \
   tgbaexplicit.hh \
+  tgbaexplicit2.hh \
   tgbakvcomplement.hh \
   tgbascc.hh \
   tgbaproduct.hh \
@@ -69,6 +70,7 @@ libtgba_la_SOURCES = \
   tgbabddconcreteproduct.cc \
   tgbabddcoredata.cc \
   tgbaexplicit.cc \
+  tgbaexplicit2.cc \
   tgbakvcomplement.cc \
   tgbaproduct.cc \
   tgbareduc.cc \
