Introduce an experimental BDD-based simulation reduction for TGBA.
* src/tgbaalgos/bddsimul.cc, src/tgbaalgos/bddsimul.hh: New files.
* src/tgbatest/ltl2tgba.cc (-RS): New option.
* src/tgbatest/spotlbtt.test: Add a check with -RS.

--- a/src/tgbaalgos/Makefile.am
+++ b/src/tgbaalgos/Makefile.am
@@ -29,6 +29,7 @@ AM_CXXFLAGS = $(WARNING_CXXFLAGS)
 tgbaalgosdir = $(pkgincludedir)/tgbaalgos
 
 tgbaalgos_HEADERS = \
+  bddsimul.hh \
   bfssteps.hh \
   cutscc.hh \
   dotty.hh \
@@ -65,6 +66,7 @@ tgbaalgos_HEADERS = \
 
 noinst_LTLIBRARIES = libtgbaalgos.la
 libtgbaalgos_la_SOURCES = \
+  bddsimul.cc \
   bfssteps.cc \
   cutscc.cc \
   dotty.cc \
