Continue work on the new implementation of tgba_explicit
* src/tgba/tgbaexplicit2.hh (spot): add missing functions
* src/tgba/tgbaexplicit2.cc (spot): add static variable initialization
* src/tgbatest/explicit2.cc: add test implementation
* src/tgbatest/Makefile.am: add explicit2 to makefile

--- a/src/tgbatest/Makefile.am
+++ b/src/tgbatest/Makefile.am
@@ -35,6 +35,7 @@ check_PROGRAMS = \
   bddprod \
   complement \
   explicit \
+  explicit2 \
   expldot \
   explprod \
   intvcomp \
@@ -53,6 +54,7 @@ bddprod_SOURCES  = ltlprod.cc
 bddprod_CXXFLAGS = -DBDD_CONCRETE_PRODUCT
 complement_SOURCES = complementation.cc
 explicit_SOURCES = explicit.cc
+explicit2_SOURCES = explicit2.cc
 expldot_SOURCES  = powerset.cc
 expldot_CXXFLAGS = -DDOTTY
 explprod_SOURCES = explprod.cc
