Fix two VPath-related bugs in bench.
* bench/ltl2tgba/known (ltlfile): Add a $srcdir.
* bench/ltlclasses/defs.in (builddir): Add the $builddir.
* bench/ltlclasses/run (gen): Change the $srcdir into $builddir.

--- a/bench/ltlclasses/defs.in
+++ b/bench/ltlclasses/defs.in
@@ -27,6 +27,7 @@ test -f ./defs || {
 }
 
 srcdir='@srcdir@'
+builddir='@builddir@'
 
 # Ensure $srcdir is set correctly.
 test -f "$srcdir/defs.in" || {
