Implementation of the propagation algorithm, update copyright
* src/tgbaalgos/Makefile.am: add propagation's files
* src/tgbatest/Makefile.am: add propagation's tests
* src/tgbaalgos/propagation.cc: implementation of propagation
algorithm
* src/tgbaalgos/propagation.hh: add prototypes
* src/tgbatest/ltl2tgba.cc: add propagation to test suite
* src/tgbatest/spotlbtt.test: add a propagation category in lbtt
* src/tgbatest/propagation.test: tests for the propagation algorithm
* src/tgbatest/tgbaread.test: update copyright

--- a/src/tgbaalgos/Makefile.am
+++ b/src/tgbaalgos/Makefile.am
@@ -48,6 +48,7 @@ tgbaalgos_HEADERS = \
   neverclaim.hh \
   powerset.hh \
   projrun.hh \
+  propagation.hh \
   randomgraph.hh \
   reachiter.hh \
   reducerun.hh \
@@ -85,6 +86,7 @@ libtgbaalgos_la_SOURCES = \
   neverclaim.cc \
   powerset.cc \
   projrun.cc \
+  propagation.cc \
   randomgraph.cc \
   reachiter.cc \
   reducerun.cc \
