--- a/src/tgbatest/Makefile.am
+++ b/src/tgbatest/Makefile.am
@@ -83,6 +83,7 @@ TESTS = \
   tgbaread.test \
   neverclaimread.test \
   readsave.test \
+  propagation.test \
   ltl2tgba.test \
   ltl2neverclaim.test \
   ltlprod.test \
