Add test for propagation, update copyright
	* src/tgbatest/Makefile.am: add propagation.test to the testsuite
	* src/tgbatest/propagation.test: tests for the propagation algorithm
	* src/tgbatest/spotlbtt.test: add a propagation category in lbtt
	* src/tgbatest/tgbaread.test: update copyright

--- a/src/tgbatest/Makefile.am
+++ b/src/tgbatest/Makefile.am
@@ -82,6 +82,7 @@ TESTS = \
   tgbaread.test \
   neverclaimread.test \
   readsave.test \
+  propagation.test \
   ltl2tgba.test \
   ltl2neverclaim.test \
   ltlprod.test \
