--- a/bench/ltl2tgba/defs.in
+++ b/bench/ltl2tgba/defs.in
@@ -1,6 +1,8 @@
-# -*- shell-script -*-
+# -*- mode: shell-script; coding: utf-8 -*-
+# Copyright (C) 2012 Laboratoire de Recherche et DÃ©veloppement
+# de l'Epita (LRDE).
 # Copyright (C) 2005  Laboratoire d'Informatique de Paris 6 (LIP6),
-# département Systèmes Répartis Coopératifs (SRC), Université Pierre
+# dÃ©partement SystÃ¨mes RÃ©partis CoopÃ©ratifs (SRC), UniversitÃ© Pierre
 # et Marie Curie.
 #
 # This file is part of Spot, a model checking library.
@@ -45,6 +47,11 @@ ELTL2TGBA="@top_builddir@/src/tgbatest/eltl2tgba@EXEEXT@"
 MODELLA="@MODELLA@"
 SPIN="@SPIN@"
 WRING2LBTT="@WRING2LBTT@"
+
+($LBTT --version) >/dev/null 2>&1 || {
+  echo "$LBTT not available.  Try configuring with --with-included-lbtt."
+  exit 77
+}
 
 for var in LBT LTL2BA LTL2NBA MODELLA SPIN WRING2LBTT
 do
