--- a/src/tgbatest/defs.in
+++ b/src/tgbatest/defs.in
@@ -1,8 +1,8 @@
-# -*- shell-script -*-
-# Copyright (C) 2009, 2010 Laboratoire de Recherche et Développement
+# -*- mode: shell-script; coding: utf-8 -*-
+# Copyright (C) 2009, 2010, 2012 Laboratoire de Recherche et DÃ©veloppement
 # de l'Epita (LRDE).
 # Copyright (C) 2003, 2004, 2006 Laboratoire d'Informatique de Paris 6 (LIP6),
-# département Systèmes Répartis Coopératifs (SRC), Université Pierre
+# dÃ©partement SystÃ¨mes RÃ©partis CoopÃ©ratifs (SRC), UniversitÃ© Pierre
 # et Marie Curie.
 #
 # This file is part of Spot, a model checking library.
@@ -51,11 +51,10 @@ rm -rf $testSubDir > /dev/null 2>&1
 mkdir $testSubDir
 cd $testSubDir
 
-# Adjust srcdir now that we are in a subdirectory.  We still want to
-# source directory corresponding to the build directory that contains
-# $testSubDir.
+# Adjust srcdir now that we are in a subdirectory.  We still want
+# $srcdir to point to the source directory corresponding to the build
+# directory that contains $testSubDir.
 case $srcdir in
-  # I
   [\\/$]* | ?:[\\/]* );;
   *) srcdir=../$srcdir
 esac
@@ -67,6 +66,12 @@ LBTT_TRANSLATE="@LBTT_TRANSLATE@"
 VALGRIND='@VALGRIND@'
 SPIN='@SPIN@'
 LTL2BA='@LTL2BA@'
+
+need_lbtt()
+{
+  # LBTT may not have been installed or compiled.
+  ("$LBTT" --version) || exit 77
+}
 
 run()
 {
