--- a/configure.ac
+++ b/configure.ac
@@ -67,7 +67,8 @@ AX_CHECK_LBTT
 AX_CHECK_GSPNLIB
 AX_CHECK_BOOST([1.34], [103400])
 
-AC_CHECK_FUNCS([srand48 drand48])
+AC_CHECK_HEADERS([sys/times.h])
+AC_CHECK_FUNCS([times srand48 drand48])
 
 LT_CONFIG_LTDL_DIR([ltdl])
 LT_INIT([win32-dll])
