preliminary work on beem
* .gitignore: ignored items
* bench/Makefile.am: Fix Makefile
* bench/beem/Makefile.am: Fix Makefile
* bench/beem/formulae.txt: Fix first formula
* bench/beem/run: Fix canvas for run
* configure.ac: Fix configure
* iface/dve2/.gitignore: Fix ignored items

--- a/configure.ac
+++ b/configure.ac
@@ -117,6 +117,7 @@ AC_CONFIG_FILES([
   bench/split-product/Makefile
   bench/wdba/Makefile
   bench/wdba/defs
+  bench/beem/Makefile
   doc/Doxyfile
   doc/Makefile
   doc/tl/Makefile
