Add a set of commuting formulae
* bench/emptchk/all-formulae.ltl: New set of formula
* bench/emptchk/defs.in: Modeification of globals
* bench/emptchk/tl-commut.sh: New bench script

--- a/bench/emptchk/defs.in
+++ b/bench/emptchk/defs.in
@@ -35,4 +35,5 @@ test -f "$srcdir/defs.in" || {
 RANDTGBA='@top_builddir@/src/tgbatest/randtgba@EXEEXT@'
 LTL2TGBA='@top_builddir@/src/tgbatest/ltl2tgba@EXEEXT@'
 FORMULAE=$srcdir/formulae.ltl
+FORMULAE=$srcdir/all-formulae.ltl
 ALGORITHMS=$srcdir/algorithms
