Export bdd_implies to the Python interface, and test it.
* wrap/python/buddy.i (bdd_implies): New function.
* wrap/python/tests/implies.py: New file.
* wrap/python/tests/Makefile.am: Add it.

--- a/wrap/python/tests/Makefile.am
+++ b/wrap/python/tests/Makefile.am
@@ -31,11 +31,12 @@ check_SCRIPTS = run
 
 TESTS = \
   alarm.py \
-  ltlsimple.py \
-  ltlparse.py \
   bddnqueen.py \
-  ltl2tgba.test \
+  implies.py \
   interdep.py \
+  ltl2tgba.test \
+  ltlparse.py \
+  ltlsimple.py \
   minato.py \
   modgray.py \
   optionmap.py \
