Tests for decomposition
Fix a test set for the decomposition,
particullary for weak preceding strong:
this allows to raise bug (one acc. which
is reduce by wdba to zero acc) that could
lead to error

* src/tgbaalgos/scc_decompose.cc: Fix bug
* src/tgbatest/Makefile.am: Fix tests
* src/tgbatest/tgba_analysis.cc: Setup tests

--- a/src/tgbatest/Makefile.am
+++ b/src/tgbatest/Makefile.am
@@ -102,6 +102,7 @@ TESTS = \
   lbttparse.test \
   scc.test \
   sccsimpl.test \
+  sccdecompose.test \
   obligation.test \
   wdba.test \
   wdba2.test \
