--- a/bench/dynchk/Makefile.am
+++ b/bench/dynchk/Makefile.am
@@ -46,12 +46,8 @@ dist_noinst_DATA = \
 nodist_noinst_DATA = \
   models/cl3serv1.tgba \
   models/cl3serv1R.tgba \
-  models/cl3serv1fair.tgba \
-  models/cl3serv1Rfair.tgba \
   models/cl3serv3.tgba \
   models/cl3serv3R.tgba \
-  models/cl3serv3fair.tgba \
-  models/cl3serv3Rfair.tgba \
   models/eeaean1.tgba \
   models/eeaean1R.tgba \
   models/eeaean2.tgba \
@@ -61,49 +57,25 @@ nodist_noinst_DATA = \
 models/cl3serv1.tgba: $(srcdir)/models/cl3serv1.pml
 	$(mkdir_p) models
 	cp $(srcdir)/models/cl3serv1.pml cl3serv1.pml
-	$(PML2TGBA) cl3serv1.pml w1 s1 >$@
+	$(PML2TGBA) cl3serv1.pml w1 s1 w2 s2 w3 s3 >$@
 	rm cl3serv1.pml
 
 models/cl3serv1R.tgba: $(srcdir)/models/cl3serv1.pml
 	$(mkdir_p) models
 	cp $(srcdir)/models/cl3serv1.pml cl3serv1.pml
-	$(PML2TGBA) -r $(srcdir)/cl3serv1.pml w1 s1 >$@
-	rm cl3serv1.pml
-
-models/cl3serv1fair.tgba: $(srcdir)/models/cl3serv1.pml
-	$(mkdir_p) models
-	cp $(srcdir)/models/cl3serv1.pml cl3serv1.pml
-	$(PML2TGBA) -w $(srcdir)/cl3serv1.pml w1 s1 >$@
-	rm cl3serv1.pml
-
-models/cl3serv1Rfair.tgba: $(srcdir)/models/cl3serv1.pml
-	$(mkdir_p) models
-	cp $(srcdir)/models/cl3serv1.pml cl3serv1.pml
-	$(PML2TGBA) -w -r $(srcdir)/cl3serv1.pml w1 s1 >$@
+	$(PML2TGBA) -r $(srcdir)/cl3serv1.pml w1 s1 w2 s2 w3 s3 >$@
 	rm cl3serv1.pml
 
 models/cl3serv3.tgba: $(srcdir)/models/cl3serv3.pml
 	$(mkdir_p) models
 	cp $(srcdir)/models/cl3serv3.pml cl3serv3.pml
-	$(PML2TGBA) $(srcdir)/cl3serv3.pml w1 s1 >$@
+	$(PML2TGBA) $(srcdir)/cl3serv3.pml w1 s1 w2 s2 w3 s3 >$@
 	rm cl3serv3.pml
 
 models/cl3serv3R.tgba: $(srcdir)/models/cl3serv3.pml
 	$(mkdir_p) models
 	cp $(srcdir)/models/cl3serv3.pml cl3serv3.pml
-	$(PML2TGBA) -r $(srcdir)/cl3serv3.pml w1 s1 >$@
-	rm cl3serv3.pml
-
-models/cl3serv3fair.tgba: $(srcdir)/models/cl3serv3.pml
-	$(mkdir_p) models
-	cp $(srcdir)/models/cl3serv3.pml cl3serv3.pml
-	$(PML2TGBA) -w $(srcdir)/cl3serv3.pml w1 s1 >$@
-	rm cl3serv3.pml
-
-models/cl3serv3Rfair.tgba: $(srcdir)/models/cl3serv3.pml
-	$(mkdir_p) models
-	cp $(srcdir)/models/cl3serv3.pml cl3serv3.pml
-	$(PML2TGBA) -w -r $(srcdir)/cl3serv3.pml w1 s1 >$@
+	$(PML2TGBA) -r $(srcdir)/cl3serv3.pml w1 s1 w2 s2 w3 s3 >$@
 	rm cl3serv3.pml
 
 models/eeaean1.tgba: $(srcdir)/models/eeaean1.pml
@@ -133,5 +105,6 @@ models/eeaean2R.tgba: $(srcdir)/models/eeaean2.pml
 	$(PML2TGBA) -r $(srcdir)/eeaean2.pml \
           noLeader zeroLeads oneLeads twoLeads threeLeads >$@
 	rm eeaean2.pml
+
 
 CLEANFILES = $(nodist_noinst_DATA)
