Implement the two phase algorithm and split DiVinE interface
* iface/dve2/Makefile.am: add new two phase files
* iface/dve2/dve2.cc: add two phase handling
* iface/dve2/dve2.hh: modify interface to add por option
* iface/dve2/dve2callback.cc: new callback for twophase
* iface/dve2/dve2callback.hh: interface for new callback
* iface/dve2/dve2check.cc: add twophase and adaptive options
* iface/dve2/dve2checkpor.cc: new way to check partial order
* iface/dve2/dve2checkpor.hh: inferface for new test
* iface/dve2/dve2kripke.cc: DiVinE kripke structure implementation
* iface/dve2/dve2kripke.hh: DiVinE kirpke structure interface
* iface/dve2/dve2state.cc: DiVinE state implementation
* iface/dve2/dve2state.hh: DiVinE state inteface
* iface/dve2/dve2succiter.cc: successor iterators implementations
* iface/dve2/dve2succiter.hh: succssor iterators interface
* iface/dve2/dve2twophase.cc: two phase algorithm implementation
* iface/dve2/dve2twophase.hh: two phase algorithm interface
* iface/dve2/leader-election-tp.ref: reference output for two phase test
* iface/dve2/leader-election.dve: leader election model
* iface/dve2/leader-election.form: formulae to check
* iface/dve2/twophase.test: new two phase test
* src/kripke/kripkeexplicit.cc, src/tgba/porinfo.hh,
  src/tgba/taatgba.cc, src/tgba/tgba.cc, src/tgba/tgba.hh,
  src/tgba/tgbakvcomplement.cc, src/tgba/tgbaproduct.cc,
  src/tgba/tgbaproduct.hh, src/tgba/tgbascc.cc,
  src/tgba/tgbasgba.cc, src/tgbaalgos/gtec/Makefile.am,
  src/tgbaalgos/gtec/ceporinfo.cc, src/tgbaalgos/gtec/ceporinfo.hh,
  src/tgbaalgos/gtec/gtec.cc,
  src/tgbaalgos/reachiter.cc: please the hook, to remove

--- a/src/tgbaalgos/gtec/Makefile.am
+++ b/src/tgbaalgos/gtec/Makefile.am
@@ -28,6 +28,7 @@ gtecdir = $(pkgincludedir)/tgbaalgos/gtec
 
 gtec_HEADERS = \
   ce.hh \
+  ceporinfo.hh \
   explscc.hh \
   gtec.hh \
   nsheap.hh \
@@ -37,6 +38,7 @@ gtec_HEADERS = \
 noinst_LTLIBRARIES = libgtec.la
 libgtec_la_SOURCES = \
   ce.cc \
+  ceporinfo.cc \
   explscc.cc \
   gtec.cc \
   nsheap.cc \
