Fix compilation problem
* src/tgbatest/Makefile.am: update makefile
* src/tgbatest/scc_analysis.cc: strength analysis

--- a/src/tgbatest/Makefile.am
+++ b/src/tgbatest/Makefile.am
@@ -25,7 +25,7 @@ LDADD = ../libspot.la
 
 # These are the most used test programs, and they are also useful
 # to run manually outside the test suite.  Always build them.
-noinst_PROGRAMS = ltl2tgba randtgba tgba_analysis
+noinst_PROGRAMS = ltl2tgba randtgba scc_analysis tgba_analysis
 
 check_SCRIPTS = defs
 # Keep this sorted alphabetically.
@@ -41,7 +41,6 @@ check_PROGRAMS = \
   ltlprod \
   mixprod \
   powerset \
-  scc_analysis \
   taatgba \
   tgbaread \
   tripprod
@@ -62,9 +61,6 @@ ltlprod_SOURCES  = ltlprod.cc
 mixprod_SOURCES  = mixprod.cc
 powerset_SOURCES = powerset.cc
 randtgba_SOURCES = randtgba.cc
-reductgba_SOURCES = reductgba.cc
-reduccmp_SOURCES = reductgba.cc
-reduccmp_CXXFLAGS = -DREDUCCMP
 scc_analysis_SOURCES = scc_analysis.cc
 tgba_analysis_SOURCES = tgba_analysis.cc
 taatgba_SOURCES = taatgba.cc
