add bench and tinychecker
Add a benchmarck for spin and a
tlchecker in construction

* README: readme
* bench/Makefile.am: makefile
* configure.ac: update configure
* iface/Makefile.am: update makefile
* iface/tlcheck/Makefile.am: update Makefile
* iface/tlcheck/README: readme
* iface/tlcheck/allbenchs.txt: sumpup
* iface/tlcheck/tlcheck: bin
* iface/tlcheck/tlcheck.cc: checker
*  bench/spin-decomp/Makefile.am: update makefile
*  bench/spin-decomp/README: update readme
*  bench/spin-decomp/allbenchs.txt: sumup
*  bench/spin-decomp/construct_bench.sh: construct bench
*  bench/spin-decomp/models/anderson.4.pm: model
*  bench/spin-decomp/models/at.4.pm: model
*  bench/spin-decomp/models/bakery.4.pm: model
*  bench/spin-decomp/models/bopdp.3.pm: model
*  bench/spin-decomp/models/elevator.4.pm: model
*  bench/spin-decomp/models/elevator2.3.pm: model
*  bench/spin-decomp/models/gear.2.pm: model
*  bench/spin-decomp/models/production_cell.3.pm: model
*  bench/spin-decomp/models/sorter.2.pm: model
*  bench/spin-decomp/models/telephony.2.pm: model
*  bench/spin-decomp/spin_bench.sh: setup bench

--- a/bench/Makefile.am
+++ b/bench/Makefile.am
@@ -20,4 +20,4 @@
 ## along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 SUBDIRS = emptchk dynchk ltl2tgba scc-stats split-product ltlcounter	\
-          ltlclasses wdba
+	  ltlclasses wdba spin-decomp
