--- a/iface/Makefile.am
+++ b/iface/Makefile.am
@@ -19,7 +19,7 @@
 ## You should have received a copy of the GNU General Public License
 ## along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-SUBDIRS = dve2
+SUBDIRS = dve2 tlcheck
 
 if WITH_GSPN
   SUBDIRS += gspn
