Finalize decomposition for tlcheck
* iface/tlcheck/.gitignore: ignore some files
* iface/tlcheck/Makefile.am: Fix Makefile
* iface/tlcheck/tlcheck.cc: decomposition is ok

--- a/iface/tlcheck/Makefile.am
+++ b/iface/tlcheck/Makefile.am
@@ -46,4 +46,4 @@ tlcheck_SOURCES = tlcheck.cc
 #   models/telephony.2.dve
 
 
-CLEANFILES =  *.dve2C  *.dve.cpp
+CLEANFILES =  *.dve2C  *.dve.cpp pid.*
