Refactored divine interface.
* iface/dve2/Makefile.am: add new files to the makefile
* iface/dve2/dve2.cc: loading function implementation
* iface/dve2/dve2.hh: headers for loading function
* iface/dve2/dve2callback.cc: callback implementation
* iface/dve2/dve2callback.hh: callback headers
* iface/dve2/dve2kripke.cc: kripke structure implementation
* iface/dve2/dve2kripke.hh: kripke structure header
* iface/dve2/dve2state.cc: divine state implementation
* iface/dve2/dve2state.hh: divine state header
* iface/dve2/dve2succiter.cc: succ iterator and ample set implementation
* iface/dve2/dve2succiter.hh: succ iterator and ample set header
* iface/dve2/dve2twophase.cc: two phase reduction implementation
* iface/dve2/dve2twophase.hh: two phase reduction header

--- a/iface/dve2/Makefile.am
+++ b/iface/dve2/Makefile.am
@@ -24,13 +24,24 @@ AM_CXXFLAGS = $(WARNING_CXXFLAGS)
 
 dve2dir = $(pkgincludedir)/iface/dve2
 
-dve2_HEADERS = dve2.hh
+dve2_HEADERS = dve2.hh \
+dve2callback.hh \
+dve2kripke.hh \
+dve2state.hh \
+dve2succiter.hh \
+dve2twophase.hh
 
 lib_LTLIBRARIES = libspotdve2.la
 libspotdve2_la_LIBADD = \
   $(top_builddir)/src/libspot.la \
   $(top_builddir)/ltdl/libltdlc.la
-libspotdve2_la_SOURCES = dve2.cc
+
+libspotdve2_la_SOURCES = dve2.cc \
+dve2callback.cc \
+dve2kripke.cc \
+dve2state.cc \
+dve2succiter.cc \
+dve2twophase.cc
 
 noinst_PROGRAMS = dve2check
 
