--- a/src/fasttgbatest/defs.in
+++ b/src/fasttgbatest/defs.in
@@ -1,9 +1,6 @@
 # -*- mode: shell-script; coding: utf-8 -*-
-# Copyright (C) 2009, 2010, 2012 Laboratoire de Recherche et Développement
+# Copyright (C)  2012 Laboratoire de Recherche et Développement
 # de l'Epita (LRDE).
-# Copyright (C) 2003, 2004, 2006 Laboratoire d'Informatique de Paris 6 (LIP6),
-# département Systèmes Répartis Coopératifs (SRC), Université Pierre
-# et Marie Curie.
 #
 # This file is part of Spot, a model checking library.
 #
