Implementation for cube
Cube is now divided in two file for the sake of clarity

* src/fasttgba/Makefile.am: add missing file
* src/fasttgba/cube.cc: new implementation file
* src/fasttgba/cube.hh: externalize

--- a/src/fasttgba/Makefile.am
+++ b/src/fasttgba/Makefile.am
@@ -34,4 +34,5 @@ fasttgba_HEADERS = \
 noinst_LTLIBRARIES = libfasttgba.la
 libfasttgba_la_SOURCES = \
   fasttgba.cc \
-  fasttgbaexplicit.cc
+  fasttgbaexplicit.cc \
+  cube.cc
