Add a wrapper class for acceptance marks
* src/fasttgba/Makefile.am: Adap the makefile
* src/fasttgba/mark.cc: code of this class
* src/fasttgba/mark.hh: New class for acceptance marks

--- a/src/fasttgba/Makefile.am
+++ b/src/fasttgba/Makefile.am
@@ -29,10 +29,12 @@ fasttgba_HEADERS = \
   fastsucciter.hh \
   fasttgba.hh \
   cube.hh \
+  mark.hh \
   fasttgbaexplicit.hh
 
 noinst_LTLIBRARIES = libfasttgba.la
 libfasttgba_la_SOURCES = \
   fasttgba.cc \
   fasttgbaexplicit.cc \
-  cube.cc
+  cube.cc \
+  mark.cc
