--- a/src/fasttgbaalgos/Makefile.am
+++ b/src/fasttgbaalgos/Makefile.am
@@ -22,8 +22,11 @@ AM_CXXFLAGS = $(WARNING_CXXFLAGS)
 
 fasttgbaalgosdir = $(pkgincludedir)/fasttgbaalgos
 
-fasttgbaalgos_HEADERS = tgba2fasttgba.hh
+fasttgbaalgos_HEADERS = \
+  tgba2fasttgba.hh \
+  dotty_dfs.hh
 
 noinst_LTLIBRARIES = libfasttgbaalgos.la
-libfasttgbaalgos_la_SOURCES = tgba2fasttgba.cc
-
+libfasttgbaalgos_la_SOURCES = \
+  tgba2fasttgba.cc \
+  dotty_dfs.cc
