Clarify succiter name
* src/fasttgba/Makefile.am: propagate changes
* src/fasttgba/fasttgba.hh: propagaye changes
* src/fasttgba/fasttgbaexplicit.hh: remove unused import
* src/fasttgba/fastsucciter.hh: change to ...
* src/fasttgba/fasttgbaiterator.hh: ... this!

--- a/src/fasttgba/Makefile.am
+++ b/src/fasttgba/Makefile.am
@@ -26,7 +26,7 @@ fasttgbadir = $(pkgincludedir)/fasttgba
 
 fasttgba_HEADERS = \
   faststate.hh \
-  fastsucciter.hh \
+  fasttgbaiterator.hh \
   fasttgba.hh \
   cube.hh \
   markset.hh \
