Consistency in naming
* src/fasttgba/Makefile.am: propagate naming changes
* src/fasttgba/fasttgba.hh: propagate naming changes
* src/fasttgba/fasttgbaiterator.hh: rename to ...
* src/fasttgba/fasttgba_succ_iterator.hh: ... this!

--- a/src/fasttgba/Makefile.am
+++ b/src/fasttgba/Makefile.am
@@ -26,7 +26,7 @@ fasttgbadir = $(pkgincludedir)/fasttgba
 
 fasttgba_HEADERS = \
   faststate.hh \
-  fasttgbaiterator.hh \
+  fasttgba_succ_iterator.hh \
   fasttgba.hh \
   cube.hh \
   markset.hh \
