Add acceptnace dictionnary
* src/fasttgba/Makefile.am: add new files
* src/fasttgba/acc_dict.cc: new file
* src/fasttgba/acc_dict.hh: new file
* src/fasttgba/ap_dict.cc: chnge ctor
* src/fasttgba/ap_dict.hh: change ctor
* src/fasttgba/fasttgbaexplicit.cc: change ctro
* src/fasttgba/fasttgbaexplicit.hh: change ctor
* src/fasttgba/markset.cc: change init
* src/fasttgba/markset.hh: change init
* src/fasttgbaalgos/tgba2fasttgba.cc: adapt converter
* src/fasttgbaalgos/tgba2fasttgba.hh: adapt converter
* src/fasttgbatest/tgba_converter.cc: adapt converter

--- a/src/fasttgba/Makefile.am
+++ b/src/fasttgba/Makefile.am
@@ -26,6 +26,7 @@ fasttgbadir = $(pkgincludedir)/fasttgba
 
 fasttgba_HEADERS = \
   ap_dict.hh \
+  acc_dict.hh \
   faststate.hh \
   fasttgba_succ_iterator.hh \
   fasttgba.hh \
@@ -36,6 +37,7 @@ fasttgba_HEADERS = \
 noinst_LTLIBRARIES = libfasttgba.la
 libfasttgba_la_SOURCES = \
   ap_dict.cc \
+  acc_dict.cc \
   fasttgba.cc \
   fasttgbaexplicit.cc \
   cube.cc \
