Rename and add acceptance dict
* src/fasttgba/Makefile.am: rename file
* src/fasttgba/fasttgba.hh: renaming faststate
* src/fasttgba/faststate.hh: rename file to ...
* src/fasttgba/fasttgba_state.hh: ... this
* src/fasttgba/fasttgba_succ_iterator.hh: renaming faststate
* src/fasttgbaalgos/dotty_dfs.hh: remove unused import
* src/fasttgbaalgos/tgba2fasttgba.cc: add acceptance dict
* src/fasttgbaalgos/tgba2fasttgba.hh: add acceptance dict

--- a/src/fasttgba/Makefile.am
+++ b/src/fasttgba/Makefile.am
@@ -27,7 +27,7 @@ fasttgbadir = $(pkgincludedir)/fasttgba
 fasttgba_HEADERS = \
   ap_dict.hh \
   acc_dict.hh \
-  faststate.hh \
+  fasttgba_state.hh \
   fasttgba_succ_iterator.hh \
   fasttgba.hh \
   cube.hh \
