Provide an implem for lbtt
* src/fasttgba/cube.cc: remove trailing in dump
* src/fasttgba/cube.hh: remove unused param
* src/fasttgba/fasttgbaexplicit.cc: remove useless
* src/fasttgba/markset.cc: provide implem for one
* src/fasttgba/markset.hh: fix details
* src/fasttgbaalgos/Makefile.am: add the new file
* src/fasttgbaalgos/lbtt_dfs.cc: new file
* src/fasttgbaalgos/lbtt_dfs.hh: new file
* src/fasttgbaalgos/tgba2fasttgba.cc: fix minor bug in casting
* src/fasttgbatest/tgba_converter.cc: add lbtt output

--- a/src/fasttgbaalgos/Makefile.am
+++ b/src/fasttgbaalgos/Makefile.am
@@ -24,9 +24,11 @@ fasttgbaalgosdir = $(pkgincludedir)/fasttgbaalgos
 
 fasttgbaalgos_HEADERS = \
   tgba2fasttgba.hh \
+  lbtt_dfs.hh \
   dotty_dfs.hh
 
 noinst_LTLIBRARIES = libfasttgbaalgos.la
 libfasttgbaalgos_la_SOURCES = \
   tgba2fasttgba.cc \
+  lbtt_dfs.cc \
   dotty_dfs.cc
