Add a function to check the reduced state space. clean code.
* iface/dve2/Makefile.am: add new file dve2checkpor
* iface/dve2/dve2check.cc: add new option -v to check red. state space
* iface/dve2/dve2checkpor.cc, iface/dve2/dve2checkpor.hh: checks the
   validity of a reduced state space.
* iface/dve2/dve2kripke.cc: remove useless variable
* iface/dve2/dve2kripke.hh: remove useless variable
* iface/dve2/dve2state.hh, iface/dve2/dve2twophase.hh: moved
  comparison function to state
* src/tgba/tgbaproduct.cc: removed useless assert

--- a/iface/dve2/Makefile.am
+++ b/iface/dve2/Makefile.am
@@ -26,6 +26,7 @@ dve2dir = $(pkgincludedir)/iface/dve2
 
 dve2_HEADERS = dve2.hh \
 dve2callback.hh \
+dve2checkpor.hh \
 dve2kripke.hh \
 dve2state.hh \
 dve2succiter.hh \
@@ -38,6 +39,7 @@ libspotdve2_la_LIBADD = \
 
 libspotdve2_la_SOURCES = dve2.cc \
 dve2callback.cc \
+dve2checkpor.cc \
 dve2kripke.cc \
 dve2state.cc \
 dve2succiter.cc \
