Rewrite a lot of code
* src/fasttgba/Makefile.am: add new files
* src/fasttgba/acc_dict.cc: rewrite
* src/fasttgba/ap_dict.cc: rewrite
* src/fasttgba/ap_dict.hh: rewrite
* src/fasttgba/cube.cc: rewrite
* src/fasttgba/cube.hh: rewrite
* src/fasttgba/fasttgba.hh: rewrite
* src/fasttgba/fasttgba_product.cc: rewrite
* src/fasttgba/fasttgba_product.hh: rewrite
* src/fasttgba/fasttgbaexplicit.cc: rewrite
* src/fasttgba/fasttgbaexplicit.hh: rewrite
* src/fasttgba/markset.cc: rewrite
* src/fasttgba/markset.hh: rewrite
* src/fasttgbaalgos/dotty_dfs.cc: rewrite
* src/fasttgbaalgos/tgba2fasttgba.cc: rewrite
* src/fasttgbatest/Makefile.am: rewrite
* src/fasttgbatest/formula_product: rewrite
* src/fasttgbatest/formula_product.cc: rewrite
* src/fasttgbatest/tgba_converter.cc: rewrite

--- a/src/fasttgba/Makefile.am
+++ b/src/fasttgba/Makefile.am
@@ -32,7 +32,8 @@ fasttgba_HEADERS = \
   fasttgba.hh \
   cube.hh \
   markset.hh \
-  fasttgbaexplicit.hh
+  fasttgbaexplicit.hh \
+  fasttgba_product.hh
 
 noinst_LTLIBRARIES = libfasttgba.la
 libfasttgba_la_SOURCES = \
@@ -40,5 +41,6 @@ libfasttgba_la_SOURCES = \
   acc_dict.cc \
   fasttgba.cc \
   fasttgbaexplicit.cc \
+  fasttgba_product.cc \
   cube.cc \
   markset.cc
