Add tests to check two phase algorithm
* iface/dve2/Makefile.am: add the new test
* iface/dve2/dve2kripke.cc: correct a bug in delete of scc_map
* iface/dve2/leader-election-tp.ref: reference results
* iface/dve2/leader-election.dve: DiVinE model
* iface/dve2/leader-election.form: formula file

--- a/iface/dve2/Makefile.am
+++ b/iface/dve2/Makefile.am
@@ -53,8 +53,9 @@ dve2check_LDADD = libspotdve2.la
 
 check_SCRIPTS = defs
 
-TESTS = dve2check.test finite.test kripke.test
-EXTRA_DIST = $(TESTS) beem-peterson.4.dve finite.dve
+TESTS = twophase.test dve2check.test finite.test kripke.test
+EXTRA_DIST = $(TESTS) beem-peterson.4.dve finite.dve \
+leader-election.dve leader-election.form  leader-election-tp.ref
 
 distclean-local:
 	rm -rf $(TESTS:.test=.dir)
