Provide the basis for model check Dve with fasttgba
Set the environment needed to check dve files

* configure.ac: add new files
* iface/Makefile.am: add new directory
* iface/dve2fasttgba/Makefile.am: the makefile
* iface/dve2fasttgba/defs.in: defs
* iface/dve2fasttgba/dve2.cc: the implementation
* iface/dve2fasttgba/dve2.hh: the interface
* iface/dve2fasttgba/dve2check.cc: the model checker

--- a/configure.ac
+++ b/configure.ac
@@ -142,6 +142,8 @@ AC_CONFIG_FILES([
   doc/org/init.el
   iface/dve2/defs
   iface/dve2/Makefile
+  iface/dve2fasttgba/defs
+  iface/dve2fasttgba/Makefile
   iface/gspn/defs
   iface/gspn/Makefile
   iface/Makefile
