--- a/src/fasttgbaalgos/Makefile.am
+++ b/src/fasttgbaalgos/Makefile.am
@@ -24,11 +24,13 @@ fasttgbaalgosdir = $(pkgincludedir)/fasttgbaalgos
 
 fasttgbaalgos_HEADERS = \
   tgba2fasttgba.hh \
+  generic_dfs.hh \
   lbtt_dfs.hh \
   dotty_dfs.hh
 
 noinst_LTLIBRARIES = libfasttgbaalgos.la
 libfasttgbaalgos_la_SOURCES = \
   tgba2fasttgba.cc \
+  generic_dfs.cc \
   lbtt_dfs.cc \
   dotty_dfs.cc
