Add a statistic tool
* iface/dve2fasttgba/dve2check.cc: modify mc
* src/fasttgbaalgos/Makefile.am: add new files
* src/fasttgbaalgos/lbtt_dfs.cc: minor changes
* src/fasttgbaalgos/stats_dfs.cc: statistics for aut.
* src/fasttgbaalgos/stats_dfs.hh: satistics for aut.
* src/fasttgbaalgos/tgba2fasttgba.cc: remove unused print

--- a/src/fasttgbaalgos/Makefile.am
+++ b/src/fasttgbaalgos/Makefile.am
@@ -26,6 +26,7 @@ fasttgbaalgos_HEADERS = \
   tgba2fasttgba.hh \
   generic_dfs.hh \
   lbtt_dfs.hh \
+  stats_dfs.hh \
   dotty_dfs.hh
 
 noinst_LTLIBRARIES = libfasttgbaalgos.la
@@ -33,4 +34,5 @@ libfasttgbaalgos_la_SOURCES = \
   tgba2fasttgba.cc \
   generic_dfs.cc \
   lbtt_dfs.cc \
+  stats_dfs.cc \
   dotty_dfs.cc
