--- a/src/fasttgbatest/Makefile.am
+++ b/src/fasttgbatest/Makefile.am
@@ -38,9 +38,10 @@ checker_SOURCES = checker.cc
 
 # Keep this sorted by STRENGTH.  Test basic things first,
 # because such failures will be easier to diagnose and fix.
-# TESTS =
+TESTS = \
+  emptchk.test
 
-# EXTRA_DIST = $(TESTS)
+EXTRA_DIST = $(TESTS)
 
-# distclean-local:
-# 	rm -rf $(TESTS:.test=.dir)
+distclean-local:
+	rm -rf $(TESTS:.test=.dir)
