Add union find structure
* src/fasttgbaalgos/ec/Makefile.am: add new files
* src/fasttgbaalgos/ec/union_find.cc: new file
* src/fasttgbaalgos/ec/union_find.hh: new file

--- a/src/fasttgbaalgos/ec/Makefile.am
+++ b/src/fasttgbaalgos/ec/Makefile.am
@@ -25,9 +25,11 @@ ecdir = $(pkgincludedir)/fasttgbaalgos/ec
 ec_HEADERS = \
   ec.hh \
   cou99.hh \
-  cou99strength.hh
+  cou99strength.hh \
+  union_find.hh
 
 noinst_LTLIBRARIES = libec.la
 libec_la_SOURCES = \
   cou99.cc \
-  cou99strength.cc
+  cou99strength.cc \
+  union_find.cc
