Add emptiness option
* iface/dve2fasttgba/Makefile.am: add tests
* iface/dve2fasttgba/dve2.hh: minor changes
* iface/dve2fasttgba/dve2check.cc: add cehcking
* src/fasttgba/fasttgba_product.cc: leak fix
* src/fasttgbaalgos/ec/cou99.cc: minor changes
* src/fasttgbaalgos/ec/cou99.hh: Fix map

--- a/iface/dve2fasttgba/Makefile.am
+++ b/iface/dve2fasttgba/Makefile.am
@@ -37,8 +37,11 @@ dve2check_LDADD = libspotdve2fasttgba.la   $(top_builddir)/iface/dve2/libspotdve
 
 check_SCRIPTS = defs
 
+TESTS = simple.test
+EXTRA_DIST = $(TESTS)
+
 # TESTS = dve2check.test finite.test kripke.test
 # EXTRA_DIST = $(TESTS) beem-peterson.4.dve finite.dve
 
-# distclean-local:
-# 	rm -rf $(TESTS:.test=.dir)
+distclean-local:
+	rm -rf $(TESTS:.test=.dir)
