Add support for Hierarchical formula analysis (script+code)
* src/tgbaalgos/Makefile.am: add stats_hierarchy
* src/tgbaalgos/stats_hierarchy.hh: Evaluation of an automata
  considering its structure (hierarchy)
* src/tgbatest/hanalysis.sh: hierarchical analysis tool
* src/tgbatest/ltl2tgba.cc: minor changes to be hierarchical compatible

--- a/src/tgbaalgos/Makefile.am
+++ b/src/tgbaalgos/Makefile.am
@@ -66,6 +66,7 @@ tgbaalgos_HEADERS = \
   simulation.hh \
   stats.hh \
   stripacc.hh \
+  stats_hierarchy.hh \
   tau03.hh \
   tau03opt.hh \
   reductgba_sim.hh \
