--- a/src/tgbatest/Makefile.am
+++ b/src/tgbatest/Makefile.am
@@ -25,7 +25,7 @@ LDADD = ../libspot.la
 
 # These are the most used test programs, and they are also useful
 # to run manually outside the test suite.  Always build them.
-noinst_PROGRAMS = ltl2tgba randtgba tgba_analysis
+noinst_PROGRAMS = ltl2tgba randtgba tgba_analysis scc_analysis
 
 check_SCRIPTS = defs
 # Keep this sorted alphabetically.
@@ -65,6 +65,7 @@ reductgba_SOURCES = reductgba.cc
 reduccmp_SOURCES = reductgba.cc
 reduccmp_CXXFLAGS = -DREDUCCMP
 tgba_analysis_SOURCES = tgba_analysis.cc
+scc_analysis_SOURCES = scc_analysis.cc
 taatgba_SOURCES = taatgba.cc
 tgbaread_SOURCES = tgbaread.cc
 tripprod_SOURCES = tripprod.cc
