Labelling SCC tools
This commit povides some labelling tools: all
terminal SCC will have a [T] acceptance set,
all weak a [W] one and all strong a [S] one.

* src/tgbaalgos/Makefile.am: add new files
* src/tgbaalgos/accpostproc.cc: new implem file
* src/tgbaalgos/accpostproc.hh: new header file

--- a/src/tgbaalgos/Makefile.am
+++ b/src/tgbaalgos/Makefile.am
@@ -28,6 +28,7 @@ AM_CXXFLAGS = $(WARNING_CXXFLAGS)
 tgbaalgosdir = $(pkgincludedir)/tgbaalgos
 
 tgbaalgos_HEADERS = \
+  accpostproc.hh \
   bfssteps.hh \
   cutscc.hh \
   cycles.hh \
@@ -73,6 +74,7 @@ tgbaalgos_HEADERS = \
 
 noinst_LTLIBRARIES = libtgbaalgos.la
 libtgbaalgos_la_SOURCES = \
+  accpostproc.cc \
   bfssteps.cc \
   cutscc.cc \
   cycles.cc \
